fixed services broken style

--- a/main.css
+++ b/main.css
@@ -178,7 +178,7 @@ section h3 {
     padding: 3em;
     display: grid;
     grid-gap: 8em;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr))
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
 }
 
 .service-box .service-name {
